assets/css/style.css
/* General styles -------*/

* {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    font-family: 'JetBrains Mono', monospace;
    background-color: #fafafa;
}

h2 {
    margin-top: 5rem;
    margin-left: 20%;
    padding-bottom: 1rem;
    font-size: 3.5rem;
    text-decoration: underline;
}


/* Navigation bar -------*/

nav {
    background-color: rgb(253, 253, 253);
    font-family: 'Syne Mono', monospace;
    font-size: 117%;
}

#navigation-links {
    position: relative;
    left: 7%;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #D85656;
    transition: 0.5s;
}

.navbar-light .navbar-nav .nav-link:active {
    color: black;
}

.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
    color: #D85656;
}

button.navbar-toggler.ml-auto, button.navbar-toggler.ml-auto.collapsed {
    border: none;
    outline: none;
}

/* Footer -------*/

footer {
    height: 150px;
    background-color: black;
    text-align: center;
    font-family: 'Syne Mono', monospace;
}

footer a {
    color: rgb(253, 253, 253);
}

footer a:hover {
    text-decoration: none;
    color: rgba(247, 246, 245, 0.5);
    transition: 0.4s;
}

#footer-heading {
    padding: 2rem 0.75rem 1rem 0;
    font-size: 175%;
}

ul#footer-social {
    padding-right: 1rem;
}

#footer-social li {
    display: inline;
    font-size: 1.5rem;
}

#footer-social i {
    font-size: 120%;
    padding: 0.5rem;
}

/* index.html --------*/

/* Hero image*/

#hero-image {
    height: 750px;
    width: 100%;
    background: url(../images/hero-placeholder.jpg) no-repeat center center;
    background-size: 100%;
    margin-top: 57px;
    margin-bottom: 45px;
    opacity: 0;

    animation-name: hero-appear; 
    animation-duration: 2s;
    animation-delay: 0.75s;
    animation-fill-mode: forwards;
}

/* animation learnt from https://www.youtube.com/watch?v=zHUpx90NerM&ab_channel=TraversyMedia at around 33 minutes */
@keyframes hero-appear {
    0% {opacity: 0}
    100% {opacity: 1}
}

/* Calls to action */

.cta {
    text-align: center;
    height: 200px;
    margin-top: 1.5rem;
    margin-bottom: 2rem;
    border: solid;
    border-radius: 30px;
    box-shadow: 4px 2px 4px #ccc;
    background-color: #f2f0f0;

}

.cta-content {
    padding-top: 13%;
    padding-right: 15%;
    padding-left: 15%;
}

a.btn.btn-primary.btn-lg {
    background-color: #D85656;
    border: none;
}

a.btn.btn-primary.btn-lg:hover {
    background-color: black;
    color: #fafafa;
    transition: 0.7s;
}

a.btn.btn-primary.btn-lg:active {
    background-color: #fafafa;
    color: black;
    border: 1px solid grey;
}

#cta-section {
    margin-bottom: 2.5rem;
}

/* music.html --------*/

.music-content {
    margin-top: 1rem;
    margin-bottom: 2rem;
}

#youtube-iframe {
    height: 400px;
    width: 100%;
}

#soundcloud-iframe {
    width: 100%;
    height: 300px;
}

/* contact.html -------*/

#contact-info {
    border: solid;
    margin-top: 6rem;
    max-width: 900px;
    height: 450px
}

#email-form {
    border: solid red;
    background-color: rgba(60, 60, 60, 0.6);
    margin-top: 2rem;
    margin-bottom: 2.5rem;
    max-width: 600px;
    padding: 30px;
    height: 250px;
}

/* gallery.html -------*/

#photo {
    clear: both;
    line-height: 0;
    column-count: 4;
    column-gap: 0px;
}

#photo img {
    width: 100%;
}

/* about.html -------*/

#about-image {
    width: 70%;
    height: 16rem;
}

/* media queries ------- */

@media screen and (max-width: 1024px) {
    #hero-image {
        height: 430px;
    }
}

@media screen and (max-width: 953px) {

    #navigation-links {
        position: relative;
        left: 3%;
    }

}

@media screen and (max-width: 825px) {

    #navigation-links {
        position: relative;
        left: 1%;
    }

}

@media screen and (max-width: 767px) {

    #navigation-links {
        position: relative;
        left: 40%;
    }

    #social-links {
        position: relative;
        left: 38%;
    }

    #navigation-links, #social-links {
        font-size: 200%;
    }

}

@media screen and (max-width: 649px) {
    #hero-image {
        height: 250px;
        margin-bottom: 0.5rem;
    }

}

@media screen and (max-width: 500px) {
     #navigation-links {
        position: relative;
        left: 33%;
    }

    #social-links {
        position: relative;
        left: 28%;
    }
}

@media screen and (max-width: 392px) {
     #navigation-links {
        position: relative;
        left: 31%;
    }

    #social-links {
        position: relative;
        left: 22%;
    }
}

